[package]
name = "mixed_ref"
version = "0.1.1"
authors = ["Nikolai Vazquez"]
license = "MIT/Apache-2.0"
homepage = "https://github.com/nvzqz/mixed-ref-rs"
repository = "https://github.com/nvzqz/mixed-ref-rs"
categories = ["no-std"]
description = "Mixed references to owned and borrowed memory."

[badges]
travis-ci = { repository = "nvzqz/mixed-ref-rs" }

[features]
default = ["std"]
std = []
